add more styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
       #header ul li{
         display: inline-block;
+        padding: 0px 15px;
       }
 
       #daftar{
@@ -33,6 +34,9 @@
         margin: 0 auto;
       }
 
+      #videoArea{
+        background: #c3c3c3;
+      }
       #titleVideo, .centerVertically{
         position: absolute;
         top: 50%;
@@ -67,6 +71,12 @@
         padding: 1%;
       }
 
+      #maps{
+        padding: 15px 0px;
+      }
+      #contact{
+        background: #5c9dff;
+      }
       form{
         padding: 15px 0px;
       }
@@ -144,7 +154,9 @@
           <input type="text" name="inputEmail" placeholder="email anda" style="width: 350px; padding: 10px; font-size: 14px"/>
           <label class="blocking">Pesan</label>
           <textarea name="inputPesan" style="width: 350px; height: 55px; padding: 10px; font-size: 14px"></textarea>
-          <input  class="blocking" type="submit" value="kirim pesan">
+          <div>
+            <input type="submit" value="kirim pesan">
+          </div>
         </form>
       </div>
     </div>
